# EMOD-Generic-Scripts

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs_final.yml  mkdocs_build.yml  mkdocs_deploy.yml
docker/: Dockerfile
docker/emod_env/: Dockerfile
docker/emod_exe/: Dockerfile
docker/emod_exe_alt/: Dockerfile
docker/emodpy/: Dockerfile
docs/: bib.md  conf.py  examples.md  examples.rst  getting_started.md  index.md  index.rst  requirements.txt  version.py  workflow.md
docs/_static/: theme_overrides.css
docs/_templates/: footer_start.html
docs/examples/: model_covariance01.md  model_covariance01.rst  model_demographics_wpp01.md  model_demographics_wpp01.rst  model_measles01.md  model_measles01.rst  model_measles_cod01.md  model_measles_gha01.md  model_measles_nga01.md  model_measles_nga02.md  model_network01.md  model_network01.rst  model_polio_nga01.md  model_rubella01.md  model_rubella01.rst  model_transtree01.md  model_transtree01.rst
env_Alma9/: EMOD_ENV.id  EMOD_EXE.id  EMOD_EXE_Alma9.def  EMOD_OS.id  EMOD_SCHEMA.id
env_Amazon2023/: EMOD_ENV.id  EMOD_EXE.id  EMOD_EXE_Amazon2023.def  EMOD_OS.id  EMOD_SCHEMA.id
env_Debian12/: EMOD_ENV.id  EMOD_ENV_Debian12.def  EMOD_EXE.id  EMOD_EXE_Debian12.def  EMOD_OS.id  EMOD_OS_Debian12.def  EMOD_SCHEMA.id
env_Debian13/: EMOD_ENV.id  EMOD_ENV_Debian13.def  EMOD_EXE.id  EMOD_EXE_Debian13.def  EMOD_OS.id  EMOD_OS_Debian13.def  EMOD_SCHEMA.id
env_Fedora41/: EMOD_ENV.id  EMOD_EXE.id  EMOD_EXE_Fedora41.def  EMOD_OS.id  EMOD_SCHEMA.id
env_Fedora42/: EMOD_ENV.id  EMOD_ENV_Fedora42.def  EMOD_EXE.id  EMOD_EXE_Fedora42.def  EMOD_OS.id  EMOD_OS_Fedora42.def  EMOD_SCHEMA.id
env_Rocky9/: EMOD_ENV.id  EMOD_EXE.id  EMOD_EXE_Rocky9.def  EMOD_OS.id  EMOD_OS_Rocky9.def  EMOD_SCHEMA.id
env_Ubuntu24/: EMOD_ENV.id  EMOD_EXE.id  EMOD_OS.id  EMOD_SCHEMA.id
environments/Alma10/: EMOD_ENV.id  EMOD_ENV_Alma10.def  EMOD_EXE.id  EMOD_EXE_Alma10.def  EMOD_OS.id  EMOD_OS_Alma10.def  EMOD_SCHEMA.id
environments/Alma9/: EMOD_ENV.id  EMOD_ENV_Alma9.def  EMOD_EXE.id  EMOD_EXE_Alma9.def  EMOD_OS.id  EMOD_OS_Alma9.def  EMOD_SCHEMA.id
environments/Amazon2023/: EMOD_ENV.id  EMOD_ENV_Amazon2023.def  EMOD_EXE.id  EMOD_EXE_Amazon2023.def  EMOD_OS.id  EMOD_OS_Amazon2023.def  EMOD_SCHEMA.id
environments/Debian13/: EMOD_ENV.id  EMOD_ENV_Debian13.def  EMOD_EXE.id  EMOD_EXE_Debian13.def  EMOD_OS.id  EMOD_OS_Debian13.def  EMOD_SCHEMA.id
environments/Fedora42/: EMOD_ENV.id  EMOD_ENV_Fedora42.def  EMOD_EXE.id  EMOD_OS.id  EMOD_SCHEMA.id  make01_EMOD_OS.py
environments/Fedora43/: EMOD_ENV.id  EMOD_ENV_Fedora43.def  EMOD_EXE.id  EMOD_EXE_Fedora43.def  EMOD_OS.id  EMOD_OS_Fedora43.def  EMOD_SCHEMA.id  make02_EMOD_EXE.py
environments/Rocky10/: EMOD_ENV.id  EMOD_ENV_Rocky10.def  EMOD_EXE.id  EMOD_EXE_Rocky10.def  EMOD_OS.id  EMOD_OS_Rocky10.def  EMOD_SCHEMA.id  make03_EMOD_ENV.py
environments/Rocky9/: EMOD_ENV.id  EMOD_ENV_Rocky9.def  EMOD_EXE.id  EMOD_EXE_Rocky9.def  EMOD_OS.id  EMOD_SCHEMA.id
environments/Ubuntu24/: EMOD_ENV.id  EMOD_ENV_Ubuntu24.def  EMOD_EXE.id  EMOD_EXE_Ubuntu24.def  EMOD_OS.id  EMOD_OS_Ubuntu24.def  EMOD_SCHEMA.id
local_python/: emod_build.py  emod_exp.py  emod_reduce.py
refdat_poppyr/: make_poppyr_inputs.py
(+460 files in other folders)
