[project]
name = "emod-generic-scripts"
dynamic = ["version"]
description = "Demonstration models using the Generic-Ongoing branch of EMOD."
license = "MIT"
authors = [
    { name="Kurt Frey", email="kurt.frey@gatesfoundation.org" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "emodpy==2.1.0",
]
classifiers=[
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
]
tests = [
]

[project.urls]
Repository="https://github.com/EMOD-Hub/EMOD-Generic-Scripts"
Issues="https://github.com/EMOD-Hub/EMOD-Generic-Scripts/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools_scm]
version_file = "docs/version.py"
