[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-generic-scripts"
dynamic = ["version"]
description = "Demonstration models using the Generic-Ongoing branch of EMOD."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Kurt Frey", email = "kurt.frey@gatesfoundation.org"}
]
keywords = ['modeling', 'IDM']
dependencies = [
    "emodpy==2.1.13",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
]
tests = [
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/EMOD-Generic-Scripts"
Issues = "https://github.com/EMOD-Hub/EMOD-Generic-Scripts/issues"

[tool.setuptools]
packages = []

[tool.setuptools_scm]
version_file = "docs/version.py"
